--- a/web/index.html
+++ b/web/index.html
@@ -101,11 +101,10 @@
 		.labely { color: rgba( 81, 184,  99, 0.1); }
 		.labelz { color: rgba(  9,  54, 172, 0.1); }
 		#logo {
-			position: absolute;
 			width: 216px;
 			height: 216px;
 			background: url('giobot.png');
-			bottom: 0px;
+			border: none;
 		}
 		@-webkit-keyframes bounce { 
 		    0% { -webkit-transform: translateY(-30px); }
@@ -119,21 +118,159 @@
 		    -webkit-animation: bounce .5s ease 1 normal;
 		}
 		
+		#game {
+			width: 600px;
+			height: 400px;
+			position: fixed;
+			bottom: 0px;
+			left: 0px;
+		}
+		.geometry {
+			position: absolute;
+			background: #AAA;
+			border: 1px solid #DDD;
+		}
+		
+		.wall {
+			border: none;
+			background: none;
+		}
+		
 	</style>
 </head>
 <body>
-	<div id="logo"></div>
 	<pre id="log"></pre>
 	<div id="graph">
 		<div class="graphwrapper"><canvas class="graphs" id="chartx" width="200" height="200"></canvas><div class="axislabel labelx">X</div></div>
 		<div class="graphwrapper"><canvas class="graphs" id="charty" width="200" height="200"></canvas><div class="axislabel labely">Y</div></div>
 		<div class="graphwrapper"><canvas class="graphs" id="chartz" width="200" height="200"></canvas><div class="axislabel labelz">Z</div></div>
 	</div>
+	<div id="game"><div id="world">
+	</div></div>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/lib/Three.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/lib/RequestAnimationFrame.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/lib/Stats.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/lib/smoothie.js" type="text/javascript" charset="utf-8"></script>
+	<script src="lib/Box2dWeb-2.1.a.3.min.js" type="text/javascript"></script>
+	<script type="text/javascript" charset="utf-8">
+		var FORCE_MULTIPLIER = 1;
+		var METER = 100; // how many pixels is a METER
+		var NUM_BOXES = 0;
+	
+		var b2Vec2 = Box2D.Common.Math.b2Vec2,
+			b2BodyDef = Box2D.Dynamics.b2BodyDef,
+			b2Body = Box2D.Dynamics.b2Body,
+			b2FixtureDef = Box2D.Dynamics.b2FixtureDef,
+			b2World = Box2D.Dynamics.b2World,
+			b2PolygonShape = Box2D.Collision.Shapes.b2PolygonShape;
+			
+		var fixDef, bodyDef;
+		var world;
+		var bodies = []; 
+		var boxes = [];
+		var dimensions = [];
+		var up;
+		var bot;
+
+		var stageWidth = 600;
+		var stageHeight = 400;
+
+		var botWidth = 216;
+		var botHeight = 216;
+
+		var worldElem = document.getElementById('world');
+		var gioBotElem;
+
+		function initWorld() {
+			world = new b2World(new b2Vec2(0, 10), true);
+
+			fixDef = new b2FixtureDef();
+			fixDef.density = 1.0;
+			fixDef.friction = 1;
+			//fixDef.restitution = 0.2;
+
+			bodyDef = new b2BodyDef();
+
+			//ground
+			addBox(stageWidth/2, stageHeight, stageWidth, 10, b2Body.b2_staticBody).element.className += ' wall';
+			//left wall
+			addBox(0, stageHeight/2-5, 10, stageHeight, b2Body.b2_staticBody).element.className += ' wall';
+			//right wall
+			addBox(stageWidth, stageHeight/2-5, 10, stageHeight, b2Body.b2_staticBody).element.className += ' wall';
+			
+			var y = 0;
+			
+			for (var i=0; i < NUM_BOXES; i++) {
+				var w = 100 + 100*Math.random();
+				var h = 50 + 10*Math.random();
+				y+= h;
+				var stackedY = stageHeight - y + h/2;
+				var boxObj = addBox(stageWidth/2 + 2*Math.random(), stackedY, w, h, b2Body.b2_dynamicBody);
+				bodies.push(boxObj.body);
+				boxes.push(boxObj.element);
+				dimensions.push({w: w, h: h});
+			}
+
+			//add giobot
+			var botObj = addBox(stageWidth/2,0,botWidth,botHeight,b2Body.b2_dynamicBody);
+			bot = botObj.body;
+			gioBotElem = botObj.element;
+			gioBotElem.id = 'logo';
+			bodies.push(bot);
+			boxes.push(gioBotElem);
+			dimensions.push({w: botWidth, h: botHeight});
+		}
+		
+		function addBox(x,y,w,h, type) {
+			bodyDef.type = type;
+			fixDef.shape = new b2PolygonShape();
+			bodyDef.position.Set(x/METER, (y)/METER);
+			fixDef.shape.SetAsBox(w/2/METER, h/2/METER);
+			var body = world.CreateBody(bodyDef);
+			body.CreateFixture(fixDef);
+			var boxElem = document.createElement('div');
+			boxElem.className = 'geometry';
+			boxElem.style.top = (y - h/2) + 'px';
+			boxElem.style.left = (x - w/2) + 'px';
+			boxElem.style.width = w + 'px';
+			boxElem.style.height = h + 'px';
+			worldElem.appendChild(boxElem);
+			
+			return { body: body, element: boxElem};
+		}
+
+		function draw() {
+			world.Step(1 / 60,  3,  3);
+            world.ClearForces();
+
+			positionElement(bot, gioBotElem, botWidth, botHeight);
+			
+			for (var i=0; i < bodies.length; i++) {
+				var body = bodies[i];
+				var elem = boxes[i];
+				var dimension = dimensions[i];
+				positionElement(body, elem, dimension.w, dimension.h);
+			};
+			
+		}
+		
+		function positionElement(body, elem, width, height) {
+			var pos = body.GetPosition();
+			elem.style.left = (pos.x*METER - width/2) + 'px';
+			elem.style.top = (pos.y*METER - height/2) + 'px';
+			var rotationStyle = 'rotate(' + (body.GetAngle() * 57.2957795) + 'deg)';
+			elem.style.WebkitTransform = rotationStyle;
+		}
+		
+		function applyForce(force) {
+			up = new b2Vec2(0,-force);
+			bodies[0].ApplyImpulse(up, bodies[0].GetWorldCenter());
+		}
+
+		initWorld();
+
+	</script>
+
 	<script>
 		/**
 		 Debug Logging
@@ -183,7 +320,7 @@
 		var gioData = { x: 0, y: 0, z: 0 };
 		var gioSmooth = { x: 0, y: 0, z: 0 };
 		var gioTS = new Date().getTime();
-		var samplesPerPage = 50; // How many x,y,z accelerometer readings do we get per second?
+		var samplesPerPage = 50; // How many x,y,z acceleroMETER readings do we get per second?
 		var sampleIntervalTime = Math.floor(1000/samplesPerPage);
 		
 		socket.on('gio', function (data) {
@@ -202,7 +339,7 @@
 		})
 	
 		/**
-		 ThreeJS/WebGL code to render visual representation of accelerometer data.
+		 ThreeJS/WebGL code to render visual representation of acceleroMETER data.
 		 **/
 
 		var SCREEN_WIDTH = window.innerWidth;
@@ -353,6 +490,7 @@
 
 		function animate() {
 			requestAnimationFrame(animate);
+			draw();
 			render();
 			stats.update();
 		}
@@ -518,18 +656,14 @@
 			}
 			if(maxDeviation > DEVIATION_THRESHOLD) {
 				//console.log('QUAKE', maxDeviation);
-				alertQuake();
+				alertQuake(maxDeviation);
 			}
 			return maxDeviation;
 		}
 		
 		var alertTimeout = -1;
-		function alertQuake() {
-			clearTimeout(alertTimeout);
-			document.getElementById('logo').className = 'quakealert';
-			alertTimeout = setTimeout(function() {
-				document.getElementById('logo').className = '';
-			}, 500);
+		function alertQuake(force) {
+			applyForce(force*FORCE_MULTIPLIER);
 		}
 		
 		function updateLines() {
