--- a/web/index.html
+++ b/web/index.html
@@ -101,9 +101,9 @@
 		.labely { color: rgba( 81, 184,  99, 0.1); }
 		.labelz { color: rgba(  9,  54, 172, 0.1); }
 		#logo {
-			width: 216px;
-			height: 216px;
-			background: url('giobot.png');
+			width: 480px;
+			height: 450px;
+			background: url('giobotbig.png');
 			border: none;
 		}
 		@-webkit-keyframes bounce { 
@@ -119,11 +119,12 @@
 		}
 		
 		#game {
-			width: 600px;
-			height: 400px;
+			width: 100%;
+			height: 100%;
 			position: fixed;
 			bottom: 0px;
 			left: 0px;
+			z-index: 2;
 		}
 		.geometry {
 			position: absolute;
@@ -153,18 +154,17 @@
 	<script src="/lib/smoothie.js" type="text/javascript" charset="utf-8"></script>
 	<script src="lib/Box2dWeb-2.1.a.3.min.js" type="text/javascript"></script>
 	<script type="text/javascript" charset="utf-8">
-		var FORCE_MULTIPLIER = 1;
-		var MAX_FORCE = 30;
+		var FORCE_MULTIPLIER = 0.1;
 		var METER = 100; // how many pixels is a METER
 		var NUM_BOXES = 0;
-		var STAGE_WIDTH = 600;
-		var STAGE_HEIGHT = 400;
-		var BOT_WIDTH = 216;
-		var BOT_HEIGHT = 216;
+		var STAGE_WIDTH = window.innerWidth;
+		var STAGE_HEIGHT = window.innerHeight+10;
+		var BOT_WIDTH = 480;
+		var BOT_HEIGHT = 450;
 		
 		var DENSITY = 1;
 		var FRICTION = 1;
-		var RESTITUTION = 0.2;
+		var RESTITUTION = 0.5;
 	
 		var b2Vec2 = Box2D.Common.Math.b2Vec2,
 			b2BodyDef = Box2D.Dynamics.b2BodyDef,
@@ -200,11 +200,29 @@
 			addBox(0, STAGE_HEIGHT/2-5, 10, STAGE_HEIGHT, b2Body.b2_staticBody).element.className += ' wall';
 			//right wall
 			addBox(STAGE_WIDTH, STAGE_HEIGHT/2-5, 10, STAGE_HEIGHT, b2Body.b2_staticBody).element.className += ' wall';
-			
+			//ceiling
+			addBox(STAGE_WIDTH/2, -1, STAGE_WIDTH, 10, b2Body.b2_staticBody).element.className += ' wall';
 			var y = 0;
+
+			// Floor
+			/*
+			fixDef.density = 50;
+			var w = STAGE_WIDTH-100;
+			var h = 30;
+			y+= h;
+			var stackedY = STAGE_HEIGHT - y + h/2;
+			var boxObj = addBox(STAGE_WIDTH/2 + 2*Math.random(), stackedY, w, h, b2Body.b2_dynamicBody);
+			boxObj.element.style.display = 'none';
+			bodies.push(boxObj.body);
+			boxes.push(boxObj.element);
+			*/
+
+			//boxObj.element.className = 'wall';
+			dimensions.push({w: w, h: h});
+			fixDef.density = DENSITY;
 			
 			for (var i=0; i < NUM_BOXES; i++) {
-				var w = 100 + 100*Math.random();
+				var w = 200 + 100*Math.random();
 				var h = 50 + 10*Math.random();
 				y+= h;
 				var stackedY = STAGE_HEIGHT - y + h/2;
@@ -215,7 +233,17 @@
 			}
 
 			//add giobot
-			var botObj = addBox(STAGE_WIDTH/2,0,BOT_WIDTH,BOT_HEIGHT,b2Body.b2_dynamicBody);
+			var points = [
+				[0,-BOT_HEIGHT/2],
+				[56,-BOT_HEIGHT/2 + 16],
+				[BOT_WIDTH/2,75],
+				[90,BOT_HEIGHT/2],
+				[-90,BOT_HEIGHT/2],
+				[-BOT_WIDTH/2,75],
+				[-56,-BOT_HEIGHT/2 + 16]
+			];
+			fixDef.density = 10;
+			var botObj = addPolygon(BOT_WIDTH/2+50,STAGE_HEIGHT - BOT_HEIGHT/2 - 50,BOT_WIDTH,BOT_HEIGHT,b2Body.b2_dynamicBody, points);
 			bot = botObj.body;
 			gioBotElem = botObj.element;
 			gioBotElem.id = 'logo';
@@ -229,6 +257,28 @@
 			fixDef.shape = new b2PolygonShape();
 			bodyDef.position.Set(x/METER, (y)/METER);
 			fixDef.shape.SetAsBox(w/2/METER, h/2/METER);
+			var body = world.CreateBody(bodyDef);
+			body.CreateFixture(fixDef);
+			var boxElem = document.createElement('div');
+			boxElem.className = 'geometry';
+			boxElem.style.top = (y - h/2) + 'px';
+			boxElem.style.left = (x - w/2) + 'px';
+			boxElem.style.width = w + 'px';
+			boxElem.style.height = h + 'px';
+			worldElem.appendChild(boxElem);
+			
+			return { body: body, element: boxElem};
+		}
+		
+		function addPolygon(x, y, w, h, type, points) {
+			bodyDef.type = type;
+			fixDef.shape = new b2PolygonShape();
+			bodyDef.position.Set(x/METER, y/METER);
+			var vecPoints = [];
+			for (var i=0; i < points.length; i++) {
+				vecPoints.push(new b2Vec2(points[i][0]/METER,points[i][1]/METER));
+			}
+			fixDef.shape.SetAsArray(vecPoints, vecPoints.length);
 			var body = world.CreateBody(bodyDef);
 			body.CreateFixture(fixDef);
 			var boxElem = document.createElement('div');
@@ -265,9 +315,11 @@
 			elem.style.WebkitTransform = rotationStyle;
 		}
 		
-		function applyForce(force) {
-			var force = Math.min(MAX_FORCE, force);
-			up = new b2Vec2(0,-force);
+		var alt = 0;
+		function applyForce(force, forceUp) {
+			var leftright = force*FORCE_MULTIPLIER;
+			var up = -Math.abs(forceUp*FORCE_MULTIPLIER);
+			up = new b2Vec2(leftright,up);
 			bodies[0].ApplyImpulse(up, bodies[0].GetWorldCenter());
 		}
 
@@ -644,9 +696,14 @@
 		
 		// STD Deviation threshold constant
 		var DEVIATION_THRESHOLD = 4;
+		var DEVIATION_CAP = 8;
 		
 		function checkSample(x, y, z) {
 			var maxDeviation = 0;
+			
+			var means = [];
+			var deviations = [];
+			
 			for (var i=0; i < axesSamples.length; i++) {
 				axesSamples[i].push(arguments[i]);
 				if(axesSamples[i].length > sampleSize) {
@@ -654,21 +711,18 @@
 				}
 				var stdDev = Stats.StandardDeviation(axesSamples[i]);
 				var mean = Stats.mean(axesSamples[i]);
+				means[i] = mean;
+				deviations[i] = stdDev;
 				var deviation = Math.abs(arguments[i] - mean) / stdDev;
 				if(deviation > maxDeviation) {
 					maxDeviation = deviation;
 				}
 			}
-			if(maxDeviation > DEVIATION_THRESHOLD) {
+			if(maxDeviation > DEVIATION_THRESHOLD && maxDeviation < DEVIATION_CAP) {
+				applyForce(y-means[1], z-means[2]);
 				//console.log('QUAKE', maxDeviation);
-				alertQuake(maxDeviation);
 			}
 			return maxDeviation;
-		}
-		
-		var alertTimeout = -1;
-		function alertQuake(force) {
-			applyForce(force*FORCE_MULTIPLIER);
 		}
 		
 		function updateLines() {
